...
  public static let copyLinkActionTitle = NSLocalizedString("CopyLinkActionTitle", tableName: "BraveShared", bundle: .strings, value: "Copy Link", comment: "Context menu item for copying a link URL to the clipboard")
  public static let openNewPrivateTabButtonTitle = NSLocalizedString("OpenNewPrivateTabButtonTitle", tableName: "BraveShared", bundle: .strings, value: "Open in New Private Tab", comment: "Context menu option for opening a link in a new private tab")
  public static let deleteLoginButtonTitle = NSLocalizedString("DeleteLoginButtonTitle", tableName: "BraveShared", bundle: .strings, value: "Delete", comment: "Label for the button used to delete the current login.")
  public static let saveButtonTitle = NSLocalizedString("SaveButtonTitle", tableName: "BraveShared", bundle: .strings, value: "Save", comment: "Label for the button used to save data")
  public static let share = NSLocalizedString("CommonShare", tableName: "BraveShared", bundle: .strings, value: "Share", comment: "Text to select sharing something (example: image, video, URL)")
...
  public static let restoreTabAffirmativeButtonTitle = NSLocalizedString("RestoreTabAffirmativeButtonTitle", tableName: "BraveShared", bundle: .strings, value: "Okay", comment: "Restore Tabs Affirmative Action")
  public static let clearPrivateDataAlertCancelButtonTitle = NSLocalizedString("ClearPrivateDataAlertCancelButtonTitle", tableName: "BraveShared", bundle: .strings, value: "Cancel", comment: "The cancel button when confirming clear private data.")
  public static let clearPrivateDataAlertOkButtonTitle = NSLocalizedString("ClearPrivateDataAlertOkButtonTitle", tableName: "BraveShared", bundle: .strings, value: "OK", comment: "The button that clears private data.")
  public static let clearSyncedHistoryAlertMessage = NSLocalizedString("ClearSyncedHistoryAlertMessage", tableName: "BraveShared", bundle: .strings, value: "This action will clear all of your private data, including history from your synced devices.", comment: "Description of the confirmation dialog shown when a user tries to clear history that's synced to another device.")
  public static let clearSyncedHistoryAlertCancelButtoTitle = NSLocalizedString("ClearSyncedHistoryAlertCancelButtoTitle", tableName: "BraveShared", bundle: .strings, value: "Cancel", comment: "The cancel button when confirming clear history.")
...
  public static let searchSuggestionSectionTitleFormat = NSLocalizedString("SearchSuggestionSectionTitleFormat", tableName: "BraveShared", bundle: .strings, value: "%@ Search", comment: "Section Title when showing search suggestions. The parameter substituted for \"%@\" is the name of the search engine. E.g.: Google Search")
  public static let turnOnSearchSuggestions = NSLocalizedString("Turn on search suggestions?", tableName: "BraveShared", bundle: .strings, comment: "Prompt shown before enabling provider search queries")
  public static let searchSuggestionSectionTitleNoSearchFormat = NSLocalizedString("SearchSuggestionSectionTitleNoSearchFormat", tableName: "BraveShared", bundle: .strings, value: "Search", comment: "Section Title when showing search suggestions and the engine does not contain the word 'Search'.")
  public static let noSearchResultsfound = NSLocalizedString("noSearchResultsfound", tableName: "BraveShared", bundle: .strings, value: "No search results found.", comment: "The information title displayed when there is no search reault found")
  public static let searchBookmarksTitle = NSLocalizedString("searchBookmarksTitle", tableName: "BraveShared", bundle: .strings, value: "Search Bookmarks", comment: "The placeholder text for bookmark search")
...
  public static let findInPagePreviousResultButtonAccessibilityLabel = NSLocalizedString("FindInPagePreviousResultButtonAccessibilityLabel", tableName: "BraveShared", bundle: .strings, value: "Previous in-page result", comment: "Accessibility label for previous result button in Find in Page Toolbar.")
  public static let findInPageNextResultButtonAccessibilityLabel = NSLocalizedString("FindInPageNextResultButtonAccessibilityLabel", tableName: "BraveShared", bundle: .strings, value: "Next in-page result", comment: "Accessibility label for next result button in Find in Page Toolbar.")
  public static let findInPageDoneButtonAccessibilityLabel = NSLocalizedString("FindInPageDoneButtonAccessibilityLabel", tableName: "BraveShared", bundle: .strings, value: "Done", comment: "Done button in Find in Page Toolbar.")
  public static let findInPageFormat = NSLocalizedString("FindInPageFormat", tableName: "BraveShared", bundle: .strings, value: "Find \"%@\"", comment: "Find %@ text in page.")
}
...

    public static let thirdPartySearchEngineAddAlertTitle = NSLocalizedString("customSearchEngine.thirdPartySearchEngineAddAlertTitle", tableName: "BraveShared", bundle: .strings,
      value: "Add Search Provider?",
      comment: "The title that asks the user to Add the search provider")

...
  public static let newFolder = NSLocalizedString("NewFolder", tableName: "BraveShared", bundle: .strings, value: "New Folder", comment: "Title for new folder popup")
  public static let enterFolderName = NSLocalizedString("EnterFolderName", tableName: "BraveShared", bundle: .strings, value: "Enter folder name", comment: "Description for new folder popup")
  public static let edit = NSLocalizedString("Edit", tableName: "BraveShared", bundle: .strings, value: "Edit", comment: "")

  public static let currentlyUsedSearchEngines = NSLocalizedString("CurrentlyUsedSearchEngines", tableName: "BraveShared", bundle: .strings, value: "Currently used search engines", comment: "Currently usedd search engines section name.")
...
