...
      $0.backgroundColor = .secondaryBraveBackground
    }

    let newTabButton = UIButton(type: .system).then {
      $0.setImage(UIImage(named: "add_tab", in: .current, compatibleWith: nil)!.template, for: .normal)
      $0.accessibilityLabel = Strings.tabTrayAddTabAccessibilityLabel
      $0.accessibilityIdentifier = "TabTrayController.addTabButton"
      $0.tintColor = .braveLabel
      $0.contentEdgeInsets = .init(top: 0, left: UX.buttonEdgeInset, bottom: 0, right: UX.buttonEdgeInset)
      $0.setContentCompressionResistancePriority(.required, for: .horizontal)
    }

    let doneButton = UIButton(type: .system).then {
...
